samples/_failures_safe/1761190780_4480e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16653685.c: In function ‘main’:
./samples/SAFE/__tmp_16653685.c:150:47: error: expected ‘)’ at end of input
  150 |     sort_word_counts(word_counts, unique_count
      |                     ~                         ^
      |                                               )
./samples/SAFE/__tmp_16653685.c:150:5: error: expected declaration or statement at end of input
  150 |     sort_word_counts(word_counts, unique_count
      |     ^~~~~~~~~~~~~~~~
